--- a/Employee information.html
+++ b/Employee information.html
@@ -15,15 +15,19 @@
                             <button type='button'onclick='register()'class='toggle-btn'>Register</button>
                         </div>
                         <form id='login' class="input-group-login">
-                            <input type="text"class='input-field'placeholder='Email id'required>
+                            <input type="email"class='input-field'placeholder='Email id'required>
                             <input type="password"class='input-field'placeholder='Enter Password'required>
-                            <input type="checkbox"class='check-box'><span>Remeber Password</span>
+                            <input type="checkbox"class='check-box'><span>Remember Password</span>
                             <button type="submit"class='submit-btn'>Log In</button>
                         </form>
                         <form id='register' class="input-group-register">
                             <input type="text"class='input-field'placeholder='First name'required>
-                            <input type="email"class='input-field'placeholder='Last Name'required>
-                            <input type="text"class='input-field'placeholder='Email id'required>
+                            <input type="text"class='input-field'placeholder='Last Name'required>
+                            <input type="email"class='input-field'placeholder='Email id'required>
+                            <input type="address"class='input-field'placeholder='Address'required><br><br>
+                            <label for="phone">Enter a phone number:</label><br><br>
+                            <input type="tel" id="phone" name="phone" placeholder="01234-56789" pattern="[0-9]{5}-[0-9]{5}" required><br><br>
+                            <small>Format: 01234-56789</small><br><br>
                             <input type="password"class='input-field'placeholder='Enter Password'required>
                             <input type="password"class='input-field'placeholder='Confirm Password'required>
                             <input type="checkbox"class='check-box'><span>I agree to the terms and conditions</span>
@@ -35,3 +39,4 @@
     
     </body>
 </html>
+        
