--- a/Employee information.html
+++ b/Employee information.html
@@ -26,8 +26,9 @@
                             <input type="email"class='input-field'placeholder='Email id'required>
                             <input type="address"class='input-field'placeholder='Address'required><br><br>
                             <label for="phone">Enter a phone number:</label><br><br>
-                            <input type="tel" id="phone" name="phone" placeholder="01234-56789" pattern="[0-9]{5}-[0-9]{5}" required><br><br>
-                            <small>Format: 01234-56789</small><br><br>
+                            <input type="tel" id="phone" name="phone" placeholder="0123456789" pattern="[0-9]{5}[0-9]{5}" required><br><br>
+                            <label for="phone">Enter Employee ID:</label><br><br>
+                            <input type="tel" id="phone" name="phone" placeholder="0123456789" pattern="[0-9]{9}" required><br><br>
                             <input type="password"class='input-field'placeholder='Enter Password'required>
                             <input type="password"class='input-field'placeholder='Confirm Password'required>
                             <input type="checkbox"class='check-box'><span>I agree to the terms and conditions</span>
@@ -39,4 +40,3 @@
     
     </body>
 </html>
-        
